Melhorias componente Input

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,12 @@
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
     "no-use-before-define": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react/jsx-filename-extension": [
       1,
       {
