--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "react/prop-types": "off",
     "no-use-before-define": "off",
     "no-unused-expressions": "off",
+    "no-unused-vars": "off",
     "prettier/prettier": [
       "error",
       {
